@@ -18,20 +18,55 @@
 
 -behaviour(cyrsasl).
 
+%% @type mechstate() = {state, Step, Nonce, Username, AuthzId, GetPassword, AuthModule, Host}
+%%     Step = 1 | 3 | 5
+%%     Nonce = string()
+%%     Username = string()
+%%     AuthzId = string()
+%%     GetPassword = function()
+%%     AuthModule = atom()
+%%     Host = string().
+
 -record(state, {step, nonce, username, authzid, get_password, auth_module,
 		host}).
+
+%% @spec (Opts) -> true
+%%     Opts = term()
 
 start(_Opts) ->
     cyrsasl:register_mechanism("DIGEST-MD5", ?MODULE, true).
 
+%% @spec () -> ok
+
 stop() ->
     ok.
+
+%% @spec (Host, GetPassword, CheckPassword) -> {ok, State}
+%%     Host = string()
+%%     GetPassword = function()
+%%     CheckPassword = function()
+%%     State = mechstate()
 
 mech_new(Host, GetPassword, _CheckPassword) ->
     {ok, #state{step = 1,
 		nonce = randoms:get_string(),
 		host = Host,
 		get_password = GetPassword}}.
+
+%% @spec (State, ClientIn) -> Ok | Continue | Error
+%%     State = mechstate()
+%%     ClientIn = string()
+%%     Ok = {ok, Props}
+%%         Props = [Prop]
+%%         Prop = {username, Username} | {authzid, AuthzId} | {auth_module, AuthModule}
+%%         Username = string()
+%%         AuthzId = string()
+%%         AuthModule = atom()
+%%     Continue = {continue, ServerOut, New_State}
+%%         ServerOut = string()
+%%         New_State = mechstate()
+%%     Error = {error, Reason} | {error, Reason, Username}
+%%         Reason = term()
 
 mech_step(#state{step = 1, nonce = Nonce} = State, _) ->
     {continue,
@@ -85,8 +120,15 @@ mech_step(A, B) ->
     ?DEBUG("SASL DIGEST: A ~p B ~p", [A,B]),
     {error, 'bad-protocol'}.
 
+%% @spec (S) -> [{Key, Value}] | bad
+%%     S = string()
+%%     Key = string()
+%%     Value = string()
+
 parse(S) ->
     parse1(S, "", []).
+
+%% @hidden
 
 parse1([$= | Cs], S, Ts) ->
     parse2(Cs, lists:reverse(S), "", Ts);
@@ -101,12 +143,16 @@ parse1([], [], T) ->
 parse1([], _S, _T) ->
     bad.
 
+%% @hidden
+
 parse2([$\" | Cs], Key, Val, Ts) ->
     parse3(Cs, Key, Val, Ts);
 parse2([C | Cs], Key, Val, Ts) ->
     parse4(Cs, Key, [C | Val], Ts);
 parse2([], _, _, _) ->
     bad.
+
+%% @hidden
 
 parse3([$\" | Cs], Key, Val, Ts) ->
     parse4(Cs, Key, Val, Ts);
@@ -116,6 +162,8 @@ parse3([C | Cs], Key, Val, Ts) ->
     parse3(Cs, Key, [C | Val], Ts);
 parse3([], _, _, _) ->
     bad.
+
+%% @hidden
 
 parse4([$, | Cs], Key, Val, Ts) ->
     parse1(Cs, "", [{Key, lists:reverse(Val)} | Ts]);
@@ -127,6 +175,10 @@ parse4([], Key, Val, Ts) ->
     parse1([], "", [{Key, lists:reverse(Val)} | Ts]).
 
 
+%% @spec (DigestURICase, JabberHost) -> bool()
+%%     DigestURICase = string()
+%%     JabberHost = string()
+%%
 %% @doc Check if the digest-uri is valid.
 %% RFC-2831 allows to provide the IP address in Host,
 %% however ejabberd doesn't allow that.
@@ -134,6 +186,7 @@ parse4([], Key, Val, Ts) ->
 %% is provided by several hosts (being one of them server3.example.org),
 %% then digest-uri can be like xmpp/server3.example.org/jabber.example.org
 %% In that case, ejabberd only checks the service name, not the host.
+
 is_digesturi_valid(DigestURICase, JabberHost) ->
     DigestURI = exmpp_stringprep:to_lower(DigestURICase),
     case catch string:tokens(DigestURI, "/") of
@@ -148,13 +201,19 @@ is_digesturi_valid(DigestURICase, JabberHost) ->
 
 
 
+%% @hidden
+
 digit_to_xchar(D) when (D >= 0) and (D < 10) ->
     D + 48;
 digit_to_xchar(D) ->
     D + 87.
 
+%% @hidden
+
 hex(S) ->
     hex(S, []).
+
+%% @hidden
 
 hex([], Res) ->
     lists:reverse(Res);
@@ -162,6 +221,16 @@ hex([N | Ns], Res) ->
     hex(Ns, [digit_to_xchar(N rem 16),
 	     digit_to_xchar(N div 16) | Res]).
 
+
+%% @spec (KeyVals, User, Passwd, Nonce, AuthzId, A2Prefix) -> string()
+%%     KeyVals = [{Key, Value}]
+%%         Key = string()
+%%         Value = string()
+%%     User = string()
+%%     Passwd = string()
+%%     Nonce = string()
+%%     AuthzId = nil() | string()
+%%     A2Prefix = string()
 
 response(KeyVals, User, Passwd, Nonce, AuthzId, A2Prefix) ->
     Realm = proplists:get_value("realm", KeyVals, ""),
